# ricochet_robots

./: Cargo.toml  LICENSE  README.md
src/: game.rs  main.rs
