[package]
name = "ricochet_robots"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-vec = "0.6.3"
eframe = { version = "0.27.0", features = ["persistence"] }
serde = { version = "1.0.197", features = ["derive"] }
